--- a/cloudtype/app.yaml
+++ b/cloudtype/app.yaml
@@ -4,9 +4,13 @@ options:
   env:
     - name: FLASK_ENV
       value: production
+    - name: PORT
+      value: "5000"  # ❗️꼭 필요
   install: pip install -r requirements.txt
   start: gunicorn --bind 0.0.0.0:$PORT --workers 2 app:app
+
 ports: 5000/http
+
 context:
   git:
     url: https://github.com/Aimyonnnnn/users.git
